feat: troca botões por links

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
                     aperiam reiciendis.
                 </p>
 
-                <button class="btn btn-accent">Fale Conosco</button>
-                <button class="btn btn-white">Mais Informações</button>
+                <a class="btn btn-accent">Fale Conosco</a>
+                <a class="btn btn-white">Mais Informações</a>
             </div>
         </section>
     </body>
