feat: apresenta medida `em`
Essa unidade de medida está ligada ao tamanho da fonte do elemento
imediatamente superior. Desta forma, será utilizado o primeiro valor
encontrado na hierarquia de elementos, e caso não haja nenhum é pego o
do `html`, o topo da cadeia.

Mas atenção, por utilizar como base o tamanho de fonte do seu elemento
pai, estilos de elementos iguais podem ser diferentes quebrando o layout

--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,13 @@
 
         <section class="section-one">
             <div class="container">
-                <h2>Primeira Seção - CSS na Prática</h2>
-                <img
-                    src="https://github.com/balta-io/3004/assets/965305/83e5350f-83c8-42f2-99ab-7cef6e4fc2ce"
-                    alt="image-css"
-                />
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Esse maiores, ab earum doloremque aliquid animi optio iure
-                    quisquam similique ex iste totam placeat! Excepturi culpa
-                    corrupti, architecto delectus eligendi sequi.
-                </p>
+                <h2>Trabalhando com EM</h2>
+                <ul>
+                    <li>Carro</li>
+                    <li>Casa</li>
+                    <li>Terreno</li>
+                    <li>Viagem</li>
+                </ul>
             </div>
         </section>
 
