feat: adiciona dicas para unidades de medida

--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,16 @@
 
         <section class="section-one">
             <div class="container">
-                <h2>Trabalhando com EM</h2>
+                <h2>Qual medida mais correta?</h2>
+                <p>Depende 😅. Pensando de forma responsiva:</p>
                 <ul>
-                    <li>Carro</li>
-                    <li>Casa</li>
-                    <li>Terreno</li>
-                    <li>Viagem</li>
+                    <li>font-size: rem</li>
+                    <li>
+                        margin e padding: em (por levar em considerações o
+                        elemento pai)
+                    </li>
+                    <li>width: em ou %</li>
+                    <li>pixel: casos de precisão e que não mudarão</li>
                 </ul>
             </div>
         </section>
