feat: apresenta o flexbox

--- a/src/index.html
+++ b/src/index.html
@@ -14,48 +14,17 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <header>
-            <div class="container">
-                <h1>Vamos trabalhar CSS</h1>
-            </div>
-        </header>
+        <h1>Entendo o Flexbox</h1>
 
-        <section class="section-one">
-            <div class="container">
-                <h2>Qual medida mais correta?</h2>
-                <p>Depende 😅. Pensando de forma responsiva:</p>
-                <ul>
-                    <li>font-size: rem</li>
-                    <li>
-                        margin e padding: em (por levar em considerações o
-                        elemento pai)
-                    </li>
-                    <li>width: em ou %</li>
-                    <li>pixel: casos de precisão e que não mudarão</li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="section-two">
-            <div class="container">
-                <h2>Mais sobre o CSS</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Iure, praesentium ad ut necessitatibus natus porro a,
-                    architecto sit dolor voluptas earum! Vitae odio consequuntur
-                    tempore molestiae cupiditate provident repudiandae ducimus!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nulla deleniti soluta explicabo? <a>Praesentium</a> amet
-                    corporis veritatis id pariatur facilis suscipit nihil,
-                    incidunt itaque placeat reiciendis? Dolores atque voluptate
-                    aperiam reiciendis.
-                </p>
-
-                <a class="btn btn-accent">Fale Conosco</a>
-                <a class="btn btn-white">Mais Informações</a>
-            </div>
-        </section>
+        <div class="container">
+            <div class="item">flex item 1</div>
+            <div class="item">flex item 2</div>
+            <div class="item">flex item 3</div>
+            <div class="item">flex item 4</div>
+            <div class="item">flex item 5</div>
+            <div class="item">flex item 5</div>
+            <div class="item">flex item 5</div>
+            <div class="item">flex item 5</div>
+        </div>
     </body>
 </html>
