fix: corrige grafia

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Entendo o Flexbox</h1>
+        <h1>Entendendo o Flexbox</h1>
 
         <div class="container">
             <div class="item">flex item 1</div>
