--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,9 @@
         <h1>Entendendo o Flexbox</h1>
 
         <div class="container">
-            <div class="item">flex item 1</div>
-            <div class="item">flex item 2</div>
-            <div class="item">flex item 3</div>
-            <div class="item">flex item 4</div>
-            <div class="item">flex item 5</div>
+            <div class="item item-1">flex item 1</div>
+            <div class="item item-2">flex item 2</div>
+            <div class="item item-3">flex item 3</div>
         </div>
     </body>
 </html>
