--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 
         <div class="container">
             <div class="item item-1">flex item 1</div>
-            <div class="item item-2">flex item 2</div>
-            <div class="item item-3">flex item 3</div>
+            <div class="item item-2">flex item 2 com texto maior</div>
+            <div class="item item-3 base">flex item 3</div>
         </div>
     </body>
 </html>
