feat: posiciona item do grid

--- a/src/index.html
+++ b/src/index.html
@@ -16,49 +16,8 @@
     <body>
         <h1>Entendendo o CSS Grid</h1>
 
-        <div class="container-grid">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Nesciunt quaerat beatae ut assumenda perspiciatis deleniti,
-                molestias est quo itaque dolore placeat. Quas dicta temporibus
-                eum doloremque. Voluptatum autem veritatis velit!
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-                hic fugit consectetur dignissimos consequuntur! Eligendi, sit!
-                Obcaecati soluta quasi veniam velit. Excepturi nam nesciunt
-                repellat officia minima autem eligendi iusto?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
-                qui sequi, deserunt obcaecati in repellat. Soluta, quos sed eum
-                accusantium nesciunt praesentium ipsa itaque vel provident
-                necessitatibus quo deleniti expedita.
-            </p>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel
-                ea, illum reprehenderit cum labore quis provident consectetur ex
-                optio ipsa quos doloribus cumque non officia! Ipsam dolor
-                deleniti temporibus dolores?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-                deleniti ducimus nulla molestias vel iusto quia, consectetur a
-                eum quaerat sed atque doloremque optio alias! Sint mollitia
-                exercitationem nobis maxime.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-                ut ex corrupti fuga nobis soluta quam nostrum, iusto perferendis
-                quas accusamus amet similique doloribus reprehenderit, maiores,
-                nemo sunt. Totam, amet!
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-                repudiandae voluptatum rem sequi deleniti ullam tempora laborum
-                voluptatem consequatur illum error, nulla in atque provident
-                exercitationem repellendus fuga animi recusandae.
-            </p>
+        <div class="grid">
+            <div class="grid-item">grid item</div>
         </div>
     </body>
 </html>
