--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
 
         <div class="grid">
             <div class="grid-item">grid item</div>
+            <div class="grid-item">grid item</div>
+            <div class="grid-item">grid item</div>
+            <div class="grid-item big">grid item</div>
+            <div class="grid-item">grid item</div>
+            <div class="grid-item">grid item</div>
         </div>
     </body>
 </html>
