feat: aplica alinhamento de elementos

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
             <div class="grid-item">grid item</div>
             <div class="grid-item">grid item</div>
             <div class="grid-item big">grid item</div>
-            <div class="grid-item">grid item</div>
-            <div class="grid-item">grid item</div>
+            <div class="grid-item self">grid item</div>
+            <div class="grid-item another-big">grid item</div>
         </div>
     </body>
 </html>
