feat: define áreas do grid

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,10 @@
         <h1>Entendendo o CSS Grid</h1>
 
         <div class="grid">
-            <div class="grid-item">grid item</div>
-            <div class="grid-item">grid item</div>
-            <div class="grid-item">grid item</div>
-            <div class="grid-item big">grid item</div>
-            <div class="grid-item self">grid item</div>
-            <div class="grid-item another-big">grid item</div>
+            <div class="grid-item header">Header</div>
+            <div class="grid-item sidebar">Sidebar</div>
+            <div class="grid-item content big">Content</div>
+            <div class="grid-item footer">Footer</div>
         </div>
     </body>
 </html>
