--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="google-adsense-account" content="ca-pub-3488551886122741" />
+        <title>Portal de Assinaturas</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,14 +14,5 @@
         />
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body>
-        <h1>Entendendo o CSS Grid</h1>
-
-        <div class="grid">
-            <div class="grid-item header">Header</div>
-            <div class="grid-item sidebar">Sidebar</div>
-            <div class="grid-item content big">Content</div>
-            <div class="grid-item footer">Footer</div>
-        </div>
-    </body>
+    <body></body>
 </html>
