feat: adiciona conteúdo inicial da primeira seção

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,19 @@
         />
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body></body>
+    <body>
+        <section class="container main">
+            <h1>
+                Conteúdo exclusivo sobre desenvolvimento de software e tudo que
+                precisamos para dominar linguagens de programação.
+            </h1>
+            <img src="images/combo.png" alt="Logo da empresa" />
+            <a href="www.balta.io">Assine 12x de R$ 120,00*</a>
+            <a href="www.balta.io">Assine com desconto para estudante</a>
+            <p>
+                * O preço pode variar caso a assinatura seja feita em outros
+                planos.
+            </p>
+        </section>
+    </body>
 </html>
