feat: define a segunda seção da página

--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,22 @@
                 </p>
             </div>
         </section>
+
+        <section class="container secondary">
+            <img
+                class="secondary-image"
+                src="images/combo.png"
+                alt="Banner da empresa"
+            />
+
+            <div class="secondary-description">
+                <h1 class="secondary-title">Assista do seu jeito</h1>
+                <p class="secondary-body">
+                    Aproveite a tela grande da TV ou assista no tablet, laptop,
+                    celular e outros aparelhos. Nossa seleção de cursos não para
+                    de crescer.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
