refactor: relaciona a seção às classes CSS

--- a/src/index.html
+++ b/src/index.html
@@ -16,21 +16,23 @@
     </head>
     <body>
         <section class="container main">
-            <div class="container-wrapper">
-                <h1 class="title">
+            <div class="main-wrapper">
+                <h1 class="main-title">
                     Conteúdo exclusivo sobre desenvolvimento de software e tudo
                     que precisamos para dominar linguagens de programação.
                 </h1>
                 <img
-                    class="image"
+                    class="main-image"
                     src="images/combo.png"
                     alt="Logo da empresa"
                 />
-                <a href="www.balta.io" class="btn">Assine 12x de R$ 120,00*</a>
-                <a href="www.balta.io" class="btn btn-outline">
+                <a href="www.balta.io" class="main-btn"
+                    >Assine 12x de R$ 120,00*</a
+                >
+                <a href="www.balta.io" class="main-btn main-btn-outline">
                     Assine com desconto para estudante
                 </a>
-                <p class="note">
+                <p class="main-note">
                     * O preço pode variar caso a assinatura seja feita em outros
                     planos.
                 </p>
