feat: cria estrutura da 3 seção

--- a/src/index.html
+++ b/src/index.html
@@ -55,5 +55,26 @@
                 </p>
             </div>
         </section>
+
+        <section class="container third">
+            <h2>Disponível nos seus dispositivos favoritos</h2>
+            <ul>
+                <li>
+                    <img src="images/tv.png" alt="Disponível na tv" />
+                    <h3>TV</h3>
+                </li>
+                <li>
+                    <img
+                        src="images/computador.png"
+                        alt="Disponível no computador"
+                    />
+                    <h3>Computador</h3>
+                </li>
+                <li>
+                    <img src="images/celular.png" alt="Disponível no celular" />
+                    <h3>Celular</h3>
+                </li>
+            </ul>
+        </section>
     </body>
 </html>
