feat: aplica estilo da seção de dispositivos

--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,11 @@
             </div>
         </section>
 
-        <section class="container third">
-            <h2>Disponível nos seus dispositivos favoritos</h2>
-            <ul>
+        <section class="third">
+            <h2 class="third-title">
+                Disponível nos seus dispositivos favoritos
+            </h2>
+            <ul class="third-devices">
                 <li>
                     <img src="images/tv.png" alt="Disponível na tv" />
                     <h3>TV</h3>
